Website: swap terminal mockup with screencast

--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -66,6 +66,9 @@ body.index
     .terminal
       float: right
 
+    .intro-video
+      border: 1px solid #000
+
   section.tagline
     background-color: #fff
     text-align: center
