--- a/website/index.jade
+++ b/website/index.jade
@@ -16,8 +16,7 @@ html
           h2 What is it?
           p Gittown is an open-source Git plugin that makes using Git on the command line even more productive and convenient! It provides additional high-level Git commands that perform typical steps in collaborative software development workflows.
 
-        .terminal
-          | $ git hack
+        iframe.intro-video(src="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/preview" width="550" height="300" frameborder="0")
 
     section.tagline
       h2 A better way to Git
