Format links on hover

--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -119,6 +119,9 @@ body.index
         height: 100%
         border-left: 1px solid darken(#fff, 5)
 
+        :hover
+          background-color: #ddd
+
         &:first-child
           border-left: 0
 
