--- a/website/css/_main.styl
+++ b/website/css/_main.styl
@@ -5,7 +5,7 @@ h1.pagetitle
   margin: 20px auto
   display: block
   font-weight: 300
-  font-size: 1.2em
+  font-size: 3.2em
 
 main
   max-width: 960px
@@ -71,9 +71,18 @@ p
 a
   color: #666
 
+.buttons
+  a
+    color: #fff
 
 code
   background-color: lighten($body-bg, 3)
   padding: 0 5px
   border-radius: 3px
   box-shadow: 0 0 0 2px lighten($body-bg, 3)
+
+
+section
+
+  h2
+    font-size: 26px
