--- a/website/index.jade
+++ b/website/index.jade
@@ -12,7 +12,6 @@ html
     section.hero
       .container
         .left
-          img(src="img/git-town-horizontal-w.svg")
           h2 High-level command-line interface for Git
           p
             | Git Town is an open-source Git plugin
@@ -27,13 +26,20 @@ html
       p
         | Git is an intentionally generic and basic tool.
         | It supports many different ways of using it equally well.
-        | It is a wonderful <b>foundation</b> for source code management.
+        | It is a wonderful <i>foundation</i> for source code management.
 
       p
         | Using it properly as a developer is cumbersome and repetitive, though.
         | As an example, safely merging a finished feature branch
         | requires up to 15 individual Git commands.
-        | See our screencast above for details.
+
+      .buttons
+        a.button.learn-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/view") View screencast
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        &nbsp;
+        a.button.learn-more(href="/the-big-picture.html") more background
 
 
     section.commands
