--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -85,6 +85,9 @@ body.index
       line-height: 1.8
       margin-bottom: 10px
 
+      a
+        text-decoration: none
+
 
   section.commands
     padding: 80px 0 160px 0
