--- a/website/index.jade
+++ b/website/index.jade
@@ -22,7 +22,7 @@ html
         iframe.intro-video(src="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/preview" width="550" height="300" frameborder="0")
 
     section.tagline
-      h2 Why an extra layer above vanilla Git?
+      h2 A workflow layer above vanilla Git
       p
         | Git is an intentionally generic and basic tool.
         | It supports many different ways of using it equally well.
@@ -31,7 +31,8 @@ html
       p
         | Using it properly as a developer is cumbersome and repetitive, though.
         | As an example, safely merging a finished feature branch
-        | requires up to 15 individual Git commands.
+        | requires up to <a href="https://github.com/Originate/git-town/blob/master/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
+        | <b>15</b></a> individual Git commands!
 
       .buttons
         a.button.learn-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/view") View screencast
