Add install button

--- a/website/index.jade
+++ b/website/index.jade
@@ -19,6 +19,10 @@ html
             | to make feature-branch based development
             | more efficient and safe.
 
+          .buttons
+            a.button.learn-more(href="/install.html") Install
+
+
         iframe.intro-video(src="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/preview" width="550" height="300" frameborder="0")
 
     section.tagline
