--- a/website/index.jade
+++ b/website/index.jade
@@ -40,10 +40,10 @@ html
 
       .buttons
         a.button.learn-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/view") View screencast
-        &nbsp;
-        &nbsp;
-        &nbsp;
-        &nbsp;
+        | &nbsp;
+        | &nbsp;
+        | &nbsp;
+        | &nbsp;
         a.button.learn-more(href="/the-big-picture.html") more background
 
 
