--- a/website/_partials/header.jade
+++ b/website/_partials/header.jade
@@ -1,6 +1,6 @@
 header
   a.logo(href="/")
-    img(src='/img/git-town-horizontal.svg', alt="Gittown")
+    img(src='img/git-town-horizontal.svg', alt="Gittown")
 
   a.github.ion-social-github(href="https://github.com/Originate/git-town") View On GitHub
   nav
