--- a/website/index.jade
+++ b/website/index.jade
@@ -94,8 +94,4 @@ html
         a.button.learn-more(href="/install.html") Install
 
     section.town
-      img(src="/img/git-town-town.svg")
-
-
-    script(src="js/application.js")
-
+      img(src="img/git-town-town.svg")
