--- a/website/index.jade
+++ b/website/index.jade
@@ -26,7 +26,7 @@ html
         iframe.intro-video(src="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/preview" width="550" height="300" frameborder="0")
 
     section.tagline
-      h2 A workflow layer above vanilla Git
+      h2 A workflow layer on top of vanilla Git
       p
         | Git is an intentionally generic and basic tool.
         | It supports many different ways of using it equally well.
