--- a/website/index.jade
+++ b/website/index.jade
@@ -33,17 +33,15 @@ html
         | It is a wonderful <i>foundation</i> for source code management.
 
       p
-        | Using it properly as a developer is cumbersome and repetitive, though.
+        | Using it properly as a developer is cumbersome and repetitive, though. <br>
         | As an example, safely merging a finished feature branch
-        | requires up to <a href="https://github.com/Originate/git-town/blob/master/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
+        | requires up to <br>
+        | <a href="https://github.com/Originate/git-town/blob/master/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
         | <b>15</b></a> individual Git commands!
 
       .buttons
-        a.button.learn-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/view") View screencast
-        | &nbsp;
-        | &nbsp;
-        | &nbsp;
-        | &nbsp;
+        a.button.view-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/view") View screencast
+        | &nbsp; &nbsp; &nbsp; &nbsp;
         a.button.learn-more(href="/the-big-picture.html") more background
 
 
