--- a/website/index.jade
+++ b/website/index.jade
@@ -12,11 +12,14 @@ html
     section.hero
       .container
         .left
-          h2 High-level command-line interface for Git
+          h2
+            | Workflow-oriented <br>
+            | command line interface
+            | for Git
           p
-            | Git Town is an open-source Git plugin
-            | that provides high-level Git commands
-            | to make feature-branch based development
+            | Git Town is an open-source Git plugin.
+            | It adds high-level Git commands
+            | that make collaborative software development
             | more efficient and safe.
 
           .buttons
