--- a/website/index.jade
+++ b/website/index.jade
@@ -13,12 +13,12 @@ html
       .container
         .left
           h2
-            | Workflow-oriented <br>
+            | High-level <br>
             | command line interface
             | for Git
           p
-            | Git Town is an open-source Git plugin.
-            | It adds high-level Git commands
+            | Git Town is an open-source Git plugin.<br>
+            | It adds Git commands
             | that make collaborative software development
             | more efficient and safe.
 
@@ -37,13 +37,13 @@ html
 
       p
         | Using it properly as a developer is cumbersome and repetitive, though. <br>
-        | As an example, safely merging a finished feature branch
+        | As an example, correctly merging a finished feature branch
         | requires up to <br>
         | <a href="https://github.com/Originate/git-town/blob/master/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
         | <b>15</b></a> individual Git commands!
 
       .buttons
-        a.button.view-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/view") View screencast
+        a.button.view-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlWjFkM1BPek9MUFE/view" target="_blank") View screencast
         | &nbsp; &nbsp; &nbsp; &nbsp;
         a.button.learn-more(href="/the-big-picture.html") more background
 
