Remove the big picture

--- a/website/index.jade
+++ b/website/index.jade
@@ -45,7 +45,7 @@ html
       .buttons
         a.button.view-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlWjFkM1BPek9MUFE/view" target="_blank") View screencast
         | &nbsp; &nbsp; &nbsp; &nbsp;
-        a.button.learn-more(href="/the-big-picture.html") more background
+        a.button.learn-more(href="/tutorial.html") view tutorial
 
 
     section.commands
