--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -83,10 +83,13 @@ body.index
       max-width: 640px
       margin: 0 auto
       line-height: 1.8
-      margin-bottom: 10px
+      margin-bottom: 20px
 
       a
         text-decoration: none
+
+    .buttons
+      margin-top: 27px
 
 
   section.commands
