--- a/website/index.jade
+++ b/website/index.jade
@@ -31,16 +31,25 @@ html
     section.tagline
       h2 A workflow layer on top of vanilla Git
       p
-        | Git is an intentionally generic and basic tool.
-        | It supports many different ways of using it equally well.
-        | It is a wonderful <i>foundation</i> for source code management.
+        | Git is a great <i>foundation</i> for source code management. <br>
+        | It provides all required pieces of functionality, <br>
+        | and supports many different ways of using it equally well. <br>
 
       p
-        | Using it properly as a developer is cumbersome and repetitive, though. <br>
-        | As an example, correctly merging a finished feature branch
-        | requires up to <br>
-        | <a href="https://github.com/Originate/git-town/blob/master/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
+        | It is intentionally generic and basic, though. <br>
+        | Using it properly as a developer is cumbersome and repetitive. <br>
+        | For example, correctly merging a finished feature branch
+        | requires <br>
+        | up to <a href="https://github.com/Originate/git-town/blob/master/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
         | <b>15</b></a> individual Git commands!
+
+      p
+        | Git Town adds a layer of high-level commands to Git. <br>
+        | They perform typical development workflow operations <br>
+        | like creating or shipping feature branches, <br>
+        | similar to how an expert Git user would do it.
+
+      p All while being as generic and unopinionated as Git.
 
       .buttons
         a.button.view-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlWjFkM1BPek9MUFE/view" target="_blank") View screencast
