--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -155,6 +155,7 @@ body.index
       margin-bottom: 40px
 
     h3
+      margin-top: 40px
       font-size: 18px
       position: relative
 
@@ -172,7 +173,7 @@ body.index
         border: 3px solid #bbb
         text-align: center
     p
-      margin-bottom: 40px
+      margin-bottom: 10px
 
     .buttons
       text-align: center
