--- a/website/index.jade
+++ b/website/index.jade
@@ -86,19 +86,38 @@ html
     section.faq
       h2 FAQ
       h3 Does this force me into any conventions for my branches or commits?
-      p Not at all. Git Town doesn’t require or enforce any particular naming convention or branch setup, and works with a wide variety of Git branching models and workflows.
-
-      h3 How is this different from Git Flow?
-      p Git Flow is a Git extension that provides specific and opinionated support for the powerful Git branching model with the same name. It doesn’t care too much about how you keep your work in sync with the rest of the team.
-
-      h3 Git Town doesn’t care much about which branching model you use. It makes you and your team more productive and keeps your Git repo clean.
-      p It is possible (and encouraged) to use the two tools together.
+      p
+        | Not at all.
+        | Git Town doesn’t require or enforce any particular naming convention or branch setup.
+        | It works with a wide variety of Git branching models and workflows.
 
       h3 Which Git branching models are supported by Git Town?
-      p Git Town is so generic that it supports all the branching models that we are aware of, for example GitHub Flow, GitLab Flow, Git Flow, and even working straight off the master branch.
+      p
+        | Git Town is so generic that it supports all the branching models that we are aware of,
+        | amongst others
+        | <a href="http://scottchacon.com/2011/08/31/github-flow.html" target="_blank">GitHub Flow</a>,
+        | <a href="https://www.atlassian.com/git/tutorials/comparing-workflows/feature-branch-workflow" target="_blank">Git Flow</a>,
+        | <a href="https://about.gitlab.com/2014/09/29/gitlab-flow" target="_blank">GitLab Flow</a>,
+        | or even committing straight into the master branch!
+
+      h3 How is this different from Git Flow?
+      p
+        | Git Flow is a Git extension that provides specific and opinionated support
+        | for the powerful Git branching model with the same name.
+        | It doesn’t care too much about how you keep your work in sync with the rest of the team.
+
+      p
+        | Git Town doesn’t care which branching model you use.
+        | It focusses on keeping your team synchronized and your code repository clean.
+
+      p
+        | It is possible (and encouraged) to use the two tools together.
 
       h3 Is it compatible with my other Git tools?
-      p Yes, we try to be good citizens. If you run into any issues with your setup, please let us know!
+      p
+        | Yes, we try to be good citizens.
+        | If you run into any issues with your setup, please
+        | <a href="https://github.com/Originate/git-town/issues/new" target="_blank">let&nbsp;us&nbsp;know</a>!
 
       .buttons
         a.button.learn-more(href="/install.html") Install
