--- a/website/_partials/header.jade
+++ b/website/_partials/header.jade
@@ -1,6 +1,6 @@
 header
   a.logo(href="/")
-    img(src='/img/git-town-horizontal.svg', alt="Gittown")
+    img(src='img/git-town-horizontal.svg', alt="Gittown")
 
   a.github.ion-social-github(href="https://github.com/Originate/git-town") View On GitHub
   nav
@@ -9,8 +9,6 @@ header
         a(href='index.html') Home
       li
         a(href='install.html') Install
-      li
-        a(href='the-big-picture.html') The Big Picture
       li
         a(href='tutorial.html') Tutorial
 
