--- a/website/css/_header.styl
+++ b/website/css/_header.styl
@@ -17,13 +17,15 @@ header
     padding-left: 10px
 
     img
-      width: 130px
+      width: 215px
+      position: absolute
+      top: -1px
 
   a.github
     height: $header-nav-height
     line-height: $header-nav-height
     color: #fff
-    font-size: 0.8em
+    font-size: 1.0em
     background-color: $accent
     padding: 0 20px
     text-decoration: none
@@ -59,7 +61,7 @@ header
           height: $header-nav-height
           line-height: $header-nav-height
           padding: 0 15px
-          font-size: 12px
+          font-size: 16px
           text-transform: uppercase
           letter-spacing: 2px
 
