Youtube video on website

--- a/website/index.jade
+++ b/website/index.jade
@@ -25,8 +25,7 @@ html
           .buttons
             a.button.learn-more(href="/install.html") Install
 
-
-        iframe.intro-video(src="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlWjFkM1BPek9MUFE/preview" width="550" height="300" frameborder="0")
+        iframe.intro-video(width="550" height="300" src="https://www.youtube.com/embed/quYrf9ssi1A?rel=0" frameborder="0" allowfullscreen)
 
     section.tagline
       h2 A workflow layer on top of vanilla Git
