Improve formatting of paragraphs on the website

--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -55,13 +55,16 @@ body.index
         margin-top: 40px
         padding-right: 40px
 
+      .buttons
+        .commands
+          margin-left: 20px
+
     .welcome
       text-align: center
       margin-bottom: 40px
 
       img
         width: 500px
-
 
     .terminal
       float: right
@@ -80,7 +83,7 @@ body.index
 
     p
       display: block
-      max-width: 640px
+      max-width: 840px
       margin: 0 auto
       line-height: 1.8
       margin-bottom: 20px
@@ -180,6 +183,10 @@ body.index
 
     .buttons
       text-align: center
+      margin-top: 45px
+
+      .twitter
+        margin-left: 20px
 
     a.learn-more
       color: #fff
