--- a/website/index.jade
+++ b/website/index.jade
@@ -24,34 +24,33 @@ html
 
           .buttons
             a.button.learn-more(href="/install.html") Install
+            a.button.commands(href="https://github.com/Originate/git-town#commands") See the Commands
 
         iframe.intro-video(width="550" height="300" src="https://www.youtube.com/embed/quYrf9ssi1A?rel=0" frameborder="0" allowfullscreen)
 
     section.tagline
       h2 A workflow layer on top of vanilla Git
       p.
-        Git is a great <i>foundation</i> for source code management. <br>
-        It provides all required pieces of functionality, <br>
+        <a href="https://git-scm.com" target="_blank">Git</a> is a great <i>foundation</i> for source code management.
+        It provides all required pieces of functionality,
         and supports many different ways of using it equally well. <br>
 
       p.
-        It is intentionally generic and basic, though. <br>
-        Using it properly as a developer is cumbersome and repetitive. <br>
-        For example, correctly merging a finished feature branch
-        requires <br>
+        It is intentionally generic and basic, though.
+        Using it properly as a developer is cumbersome and repetitive.
+        For example, correctly merging a finished feature branch requires
         up to <a href="https://github.com/Originate/git-town/blob/217f31e633d400d3eefed94f86b35a10838f1ebe/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
         <b>15</b></a> individual Git commands!
 
       p.
-        Git Town adds a layer of high-level commands to Git. <br>
-        They perform typical development workflow operations <br>
-        like creating or shipping feature branches, <br>
+        Git Town adds a layer of high-level commands to Git.
+        They perform typical development workflow operations
+        like creating or shipping feature branches,
         similar to how an expert Git user would do it.
-
-      p All while being as generic and unopinionated as Git.
+        All while being as generic and unopinionated as Git.
 
       .buttons
-        a.button.view-more(href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlWjFkM1BPek9MUFE/view" target="_blank") View screencast
+        a.button.view-more(href="https://youtu.be/quYrf9ssi1A" target="_blank") View screencast
         a.button.learn-more(href="/tutorial.html") view tutorial
 
 
@@ -119,6 +118,7 @@ html
 
       .buttons
         a.button.learn-more(href="/install.html") Install
+        a.button.twitter(href="https://twitter.com/GitTown" target="_blank") Ask a question
 
     section.town
       img(src="img/git-town-town.svg")
