--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -99,7 +99,7 @@ body.index
 
 
   section.commands
-    padding: 80px 0 160px 0
+    padding: 80px 0 50px 0
     background-color: $accent
     color: #fff
     box-shadow: inset 0 -260px 0 0 $body-bg
@@ -118,8 +118,6 @@ body.index
 
     .commands
       cf()
-      height: 230px
-      width: 960px
       margin: 0 auto
       background-color: #fff
       color: $black
@@ -127,8 +125,9 @@ body.index
       .command
         box-sizing: border-box
         width: 25%
+        min-width: 230px
+        height: 230px
         float: left
-        height: 100%
         border-left: 1px solid darken(#fff, 5)
 
         :hover
@@ -196,5 +195,48 @@ body.index
     text-align: center
 
     img
-      width: 670px
+      width: 90%
+      max-width: 670px
 
+
+@media (min-width: ($break-sml + 1px)) and (max-width: $break-med)
+  body.index
+    section.commands
+      .commands
+        .command
+          width: 50%
+
+@media (max-width: $break-sml)
+  body.index
+    section.tagline, section.commands
+      padding-right: 20px
+      padding-left: 20px
+
+    section.commands
+      .commands
+        .command
+          width: 100%
+
+    section.faq
+      .buttons a
+        margin: 15px
+
+@media (max-width: $break-med)
+  body.index
+    section.hero
+      .left
+        text-align: center
+        display: block
+        width: auto
+        float: none
+        padding: 0
+        margin-bottom: 30px
+
+        h2
+          text-align: center
+
+      iframe
+        display: block
+        margin: 0 auto
+        width: 100%
+        max-width: 550px
