--- a/website/index.jade
+++ b/website/index.jade
@@ -30,17 +30,17 @@ html
 
     section.tagline
       h2 A workflow layer on top of vanilla Git
-      p.
-        <a href="https://git-scm.com" target="_blank">Git</a> is a great <i>foundation</i> for source code management.
-        It provides all required pieces of functionality,
-        and supports many different ways of using it equally well. <br>
+      p
+        a(href="https://git-scm.com" target="_blank") Git
+        |  is a great <i>foundation</i> for source code management. It provides all required pieces of functionality,
+        | and supports many different ways of using it equally well.
 
       p.
         It is intentionally generic and basic, though.
         Using it properly as a developer is cumbersome and repetitive.
         For example, correctly merging a finished feature branch requires
         up to <a href="https://github.com/Originate/git-town/blob/217f31e633d400d3eefed94f86b35a10838f1ebe/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
-        <b>15</b></a> individual Git commands!
+        <strong>15</strong></a> individual Git commands!
 
       p.
         Git Town adds a layer of high-level commands to Git.
@@ -61,7 +61,7 @@ html
         Git Town adds a number of high-level Git commands that automate
         typical operations in the software development workflow.
 
-      .commands
+      .commands.container
         a(href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-hack.md" target="_blank")
           .command
             h3 $ git hack
@@ -78,7 +78,7 @@ html
           .command
             h3 $ git ship
             p Delivers your completed feature branch and removes it.
-        a.button.view-more(href="https://github.com/Originate/git-town#commands") View all commands
+      a.button.view-more(href="https://github.com/Originate/git-town#commands") View all commands
 
     section.faq
       h2 FAQ
