--- a/website/css/_main.styl
+++ b/website/css/_main.styl
@@ -82,7 +82,10 @@ code
   box-shadow: 0 0 0 2px lighten($body-bg, 3)
 
 
-section
+section h2
+  font-size: 26px
 
-  h2
-    font-size: 26px
+@media screen and (max-width: $break-sml)
+  h1.pagetitle, main
+    padding-right: 20px
+    padding-left: 20px
