--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -30,7 +30,7 @@ body.index
       float: left
       width: $hero-width - 550px
       padding-right: 20px
-      color: #fff
+      color: #000
 
       img
         width: 90%
@@ -38,7 +38,7 @@ body.index
       h2
         text-align: left
         margin-top: 20px
-        color: #fff
+        color: #000
         font-size: 22px
 
       p
