responsive fix for buttons

--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -212,6 +212,13 @@ body.index
       padding-right: 20px
       padding-left: 20px
 
+    section.tagline .buttons
+      a
+        display: inline-block
+        width: auto
+        float: none
+        margin: 15px
+
     section.commands
       .commands
         .command
