add twitter icon to button

--- a/website/css/_home.styl
+++ b/website/css/_home.styl
@@ -187,6 +187,10 @@ body.index
       .twitter
         margin-left: 20px
 
+        &:before
+          font-size: 1.5em
+          margin-right: 4px
+
     a.learn-more
       color: #fff
       margin: 0 auto
