--- a/website/index.jade
+++ b/website/index.jade
@@ -118,7 +118,7 @@ html
 
       .buttons
         a.button.learn-more(href="/install.html") Install
-        a.button.twitter(href="https://twitter.com/GitTown" target="_blank") Ask a question
+        a.button.twitter.ion-social-twitter(href="https://twitter.com/GitTown" target="_blank") Ask a question
 
     section.town
       img(src="img/git-town-town.svg")
