--- a/website/_layout.jade
+++ b/website/_layout.jade
@@ -5,6 +5,7 @@ html
     link(rel="stylesheet", href="css/application.css")
     link(href='http://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans:400,300,700', rel='stylesheet', type='text/css')
     link(rel="stylesheet", href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css")
+    link(rel="alternate", type="application/rss+xml", title="RSS", href="https://github.com/Originate/git-town/releases.atom")
 
   body(class="#{ current.source  }")
     != partial("_partials/header")
