Fix video on homepage

--- a/website/index.jade
+++ b/website/index.jade
@@ -27,7 +27,7 @@ html
             a.button.learn-more(href="/install.html") Install
             a.button.commands(href="https://github.com/Originate/git-town#commands") See the Commands
 
-        iframe.intro-video(width="550" height="300" src="https://www.youtube.com/embed/quYrf9ssi1A?rel=0" frameborder="0" allowfullscreen)
+        iframe.intro-video(width="550" height="300" src="https://www.youtube.com/embed/oLaUsUlFfTo" frameborder="0" allowfullscreen)
 
     section.tagline
       h2 A workflow layer on top of vanilla Git
